--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                     <li class="lis">
                         مقدمه
                         <ol class="fehrest2">
+                            <li> چرا فریم‌ورک؟</li>
                             <li>انگولار چیست؟</li>
                             <li> تاریخچه‌ی انگولار</li>
                         </ol>
@@ -176,6 +177,19 @@
             </div>
         </div>
 
+
+        <div class="step slide oposit-text" data-x="-8800" data-y="-200" data-scale="2">
+            <h6 style="margin:100px 0 0 10px; font-size: 45px; color: #555;"> فریم‌ورک‌ها و کتابخانه‌ها</h6>
+
+            <p style="margin-top: 90px; line-height: 3; margin-right: 35px; font-size: 32px;">
+                <i class="ion-android-checkbox-blank" style="font-size: 30px; color:#C62828; margin-left: 20px;"></i>وب‌اپلیکشن‌چیست؟
+                <br><i class="ion-android-checkbox-blank" style="font-size: 30px; color:#C62828; margin-left: 20px;"></i>چرا فریم‌ورک؟
+                <br><i class="ion-android-checkbox-blank" style="font-size: 30px; color:#C62828; margin-left: 20px;"></i>چرا فریم‌ورک‌های جاوااسکریپتی؟</p>
+            <p class="num" style="margin: 0 0px 120px 0;">1</p>
+
+
+        </div>
+
         <div id="its" class="step slide oposit-text" data-x="-6500" data-y="1500" data-rotate="90" data-scale="6">
             <img src="css/logo-nav@2x.png" style="float: left; ">
             <h6 style="margin:30px 0 0 10px; font-size: 45px; color: #555;"> انگولار چیست؟</h6>
@@ -190,7 +204,7 @@
                 <li><i class="ion-code-working" style="font-size: 45px; color: #C62828; margin-left: 10px;"></i> توسعه‌ی متن‌باز </li>
                 <li><i class="ion-android-checkbox-outline" style="font-size: 45px; color: #C62828; margin-left: 10px;"></i> تحت مجوز MIT </li>
             </ol>
-            <p class="num" style="margin: 0 0px 120px 0;">1</p>
+            <p class="num" style="margin: 0 0px 120px 0;">2</p>
 
 
         </div>
@@ -207,7 +221,7 @@
 
         <div class="step slide oposit" data-x="0" data-y="800" data-scale="2">
             <img src="css/angular-3.svg" class="angular-logo"><q class="angular-4">4</q>
-            <p class="num">2</p>
+            <p class="num">3</p>
 
         </div>
         <!--
@@ -251,7 +265,7 @@
 
             </div>
 
-            <p class="num" style="margin: 500px 30px 15px 0;">3</p>
+            <p class="num" style="margin: 500px 30px 15px 0;">4</p>
 
         </div>
 
@@ -271,7 +285,7 @@
                 </p>
             </div>
 
-            <p class="num" style="margin: 500px 30px 15px 0;">4</p>
+            <p class="num" style="margin: 500px 30px 15px 0;">5</p>
 
         </div>
 
@@ -291,7 +305,7 @@
 
             <p style="position: absolute; float: left; font-size: 65px; word-spacing: 35px; letter-spacing: 1.7px;  margin:160px 60px 30px 10px;  direction: ltr;  color: rgb(25, 118, 210);"><strong>Model     View<span style="color: #E23137;">   Whatever</span></strong></p>
 
-            <p class="num" style="margin: 500px 30px 15px 0;">5</p>
+            <p class="num" style="margin: 500px 30px 15px 0;">6</p>
 
         </div>
 
@@ -318,7 +332,7 @@
 </pre>
             <pre style="background:#002240;color:#fff; direction: ltr; line-height: 2;"> ng serve
 </pre>
-            <p class="num" style="margin: 500px 30px 100px 0;">6</p>
+            <p class="num" style="margin: 500px 30px 100px 0;">7</p>
 
         </div>
 
@@ -342,7 +356,7 @@
             </p>
             <p style="line-height: 2.2; font-size: 28px;  margin-top: 45px; margin-right: 100px;"><span style="font-weight: 700; font-size: 35px;"><i class="ion-android-checkmark-circle" style="font-size: 40px; color:#C62828; margin-left: 10px;"></i>مزیت:</span> <br> <span style="margin-right: 100px;"><i class="ion-ios-checkmark-outline" style="font-size: 30px; color:#C62828; margin-left: 10px;"></i> صرفه‌جویی در پهنای باند </span><br><span style="margin-right: 100px;"><i class="ion-ios-checkmark-outline" style="font-size: 30px; color:#C62828; margin-left: 10px;"></i>افزایش سرعت</span> <br><span style="margin-right: 100px;"><i class="ion-ios-checkmark-outline" style="font-size: 30px; color:#C62828; margin-left: 10px;"></i> کش‌کردن قالب و داده‌ها
             </span></p>
-            <p class="num" style="margin: 500px 30px 100px 0;">7</p>
+            <p class="num" style="margin: 500px 30px 100px 0;">8</p>
 
         </div>
         <!--
@@ -372,7 +386,7 @@
             <h1 style="margin:70px 10px 10px 10px; color: #555; font-size: 38px;">کاربرد‌های انگولار</h1>
             <p style="direction: ltr; text-align: center; line-height: 2.9; margin-top: 80px; font-size: 120%;"><i class="ion-android-checkmark-circle" style="font-size: 40px; color:#C62828; margin-right: 10px;"></i> Single Page Applications (SPAs)<br><i class="ion-android-checkmark-circle" style="font-size: 40px; color:#C62828; margin-right: 10px;"></i> Progressive Web Applications (PWAs)<br><i class="ion-android-checkmark-circle" style="font-size: 40px; color:#C62828; margin-right: 10px;"></i> Native Applications <br><i class="ion-android-checkmark-circle" style="font-size: 40px; color:#C62828; margin-right: 10px;"></i> Desktop Applications
             </p>
-            <p class="num" style="margin: 500px 30px 100px 0;">8</p>
+            <p class="num" style="margin: 500px 30px 100px 0;">9</p>
         </div>
 
 
@@ -385,7 +399,7 @@
                 <p style=" float: left; position: relative; margin-left: 25px; align-content: center;">Vs.</p>
                 <img src="css/logo.png" style=" float: left; position: relative; align-content: center; margin-left: 35px;" width="250px;">
             </div>
-            <p class="num" style="margin: 500px 30px 100px 0;">9</p>
+            <p class="num" style="margin: 500px 30px 100px 0;">10</p>
 
         </div>
 
@@ -402,7 +416,7 @@
                 <p style="direction: ltr; margin-top: 15px; width: 600px; word-spacing: 5px; letter-spacing: 0.7px;"><i class="ion-link" style="direction: ltr; font-size: 45px; color: #00d8ff; margin-left: 38px; margin-right: 15px;"></i> Netflix, Udemy, Uber, Twitter,<br><span style="margin-left: 155px;"> Pinterset, Airbnb, Reddit, ...</span></p>
 
             </ol>
-            <p class="num" style="margin: 500px 50px 30px 0;">10</p>
+            <p class="num" style="margin: 500px 50px 30px 0;">11</p>
 
         </div>
 
@@ -418,7 +432,7 @@
                 <p style="direction: ltr; margin-top: 50px; width: 650px; word-spacing: 5px; letter-spacing: 0.7px;"><i class="ion-link" style="direction: ltr; font-size: 45px; color: #42b883; margin-left: 38px; margin-right: 15px;"></i> AliBaba, Baidu, Expedia, Gitlab, ...</p>
 
 
-                <p class="num" style="margin: 500px 50px 30px 0;">11</p>
+                <p class="num" style="margin: 500px 50px 30px 0;">12</p>
             </ol>
         </div>
 
@@ -436,7 +450,7 @@
 
             </ol>
 
-            <p class="num" style="margin: 500px 50px 30px 0;">12</p>
+            <p class="num" style="margin: 500px 50px 30px 0;">13</p>
         </div>
 
         <div class="step slide oposit-textt" data-x="10000" data-y="-8000" data-rotate="130" data-scale="4">
@@ -447,7 +461,7 @@
                 <br><img src="css/logo.png" width="60px" style="margin-left: 20px;">۹۰٪ APIها یکسان هستند و به‌روز‌رسانی برای پروژه‌های کوچک راحت است.
 
             </p>
-            <p class="num" style="margin: 300px 50px 80px 0;">13</p>
+            <p class="num" style="margin: 300px 50px 80px 0;">14</p>
 
         </div>
 
@@ -459,7 +473,7 @@
                 <br><img src="css/logo.png" width="60px" style="margin-left: 20px;">ویو فریم‌ورک است و نسبتا انعطاف‌پذیر است.
 
             </p>
-            <p class="num" style="margin: 300px 50px 80px 0;">14</p>
+            <p class="num" style="margin: 300px 50px 80px 0;">15</p>
 
         </div>
 
@@ -469,8 +483,12 @@
             <img src="css/1*YpbalqSUMYIYjXCduq7dcA.png" width="360px" style="float: left;">
             <img src="css/1*gpq0Y-rRczJ5C3DI5_EUlw.png" width="360px" style="float: left; margin-left: 50px; margin-top: 250px;">
 
-            <p class="num" style="margin: 300px 50px 80px 0;">15</p>
+            <p class="num" style="margin: 300px 50px 80px 0;">16</p>
 
+        </div>
+
+        <div class="step slide oposit" data-x="11000" data-y="-22000" data-scale="4">
+            <h1 style="font-size: 110px; text-align: center;">نتیجه‌گیری</h1>
         </div>
 
 
@@ -484,7 +502,7 @@
                 <br>مناسب برای پروژه بزرگ</p>
 
 
-            <p class="num" style="margin: 500px 50px 30px 0;">16</p>
+            <p class="num" style="margin: 500px 50px 30px 0;">17</p>
         </div>
 
         <div class="step slide oposit-textc" data-x="10000" data-y="-25000" data-z="-5000" data-rotate-x="90" data-rotate-y="90" data-rotate="150" data-scale="7">
@@ -497,7 +515,7 @@
                 <br>قابلیت انتخاب از بین پکیج‌های متنوع
             </p>
 
-            <p class="num" style="margin: 500px 50px 30px 0;">17</p>
+            <p class="num" style="margin: 500px 50px 30px 0;">18</p>
 
         </div>
 
@@ -512,7 +530,7 @@
                 <br>قابلیت انتخاب از بین پکیج‌های متنوع
             </p>
 
-            <p class="num" style="margin: 500px 50px 30px 0;">18</p>
+            <p class="num" style="margin: 500px 50px 30px 0;">19</p>
 
         </div>
 
