--- a/index.html
+++ b/index.html
@@ -106,20 +106,21 @@
             <p style=" font-size: 35px; line-height: 27px; margin-top: 30px; ">
                 عنوان ارائه:</p>
             <p id="subject"><br>بررسی فریم‌ورک <span style="color: #E23237; font-family: 'vazirb';">انگولار</span></p>
-            <hr>
             <img src="css/photo_2017-02-04_00-58-51.jpg" class="image">
 
             <div class="init_page">
 
                 <div id="name">سمانه سادات یعقوبی</div>
 
-                <div class="details">
+                <div class="details1">
                     <br>دانشجوی رشته‌ی مهندسی نرم‌افزار
                 </div>
-                <p class="details"><br><br><br><br>درس روش پژوهش و ارائه</p>
+                <p class="details"><br><br>درس روش پژوهش و ارائه</p>
+                <p class="details"> زمان: ۸ آبان</p>
+
 
             </div>
-            <img src="css/Logo3.png" style="float: left; margin-top: 90px; width: 240px; ">
+            <img src="css/Logo3.png" style="float: left; margin-top: 30px; width: 240px; ">
 
         </div>
         <!--
@@ -145,7 +146,7 @@
                     <li class="lis">
                         مقدمه
                         <ol class="fehrest2">
-                            <li> چرا فریم‌ورک؟</li>
+                            <li> فریم‌ورک‌ها و کتابخانه‌ها</li>
                             <li>انگولار چیست؟</li>
                             <li> تاریخچه‌ی انگولار</li>
                         </ol>
@@ -344,7 +345,7 @@
         </div>
 
         <div class="step slide ang" data-x="-1000" data-y="20000" data-z="-10000" data-rotate="1500" data-scale="5">
-            <img src="css/angular-ng-bootstrap.png" width="1000px;">
+            <img src="css/angular-ng-bootstrap.png" width="850px;">
 
         </div>
 
@@ -393,11 +394,11 @@
         <div class="step slide oposit-text1" data-x="9700" data-y="-1500" data-scale="6">
             <h1 style="font-size: 40px; color: #555; letter-spacing: 2;">مقایسه فریم‌ورک‌های سمت کاربر</h1>
             <div style="margin: 150px 0 150px 0;">
-                <img src="css/react-logo-1000-transparent.png" style=" float: left; margin-right: 25px; position: relative; align-content: center;" width=270px;>
+                <img src="css/react-logo-1000-transparent.png" style=" float: left; margin-right: 25px; position: relative; align-content: center;" width=250px;>
                 <p style=" float: left; margin-right: 25px; position: relative; align-content: center;">Vs.</p>
-                <img src="css/angular.svg" style=" float: left; margin-left: 15px; position: relative; align-content: center; margin-right: 25px;" width="250px;">
+                <img src="css/angular.svg" style=" float: left; margin-left: 15px; position: relative; align-content: center; margin-right: 25px;" width="230px;">
                 <p style=" float: left; position: relative; margin-left: 25px; align-content: center;">Vs.</p>
-                <img src="css/logo.png" style=" float: left; position: relative; align-content: center; margin-left: 35px;" width="250px;">
+                <img src="css/logo.png" style=" float: left; position: relative; align-content: center; margin-left: 35px;" width="230px;">
             </div>
             <p class="num" style="margin: 500px 30px 100px 0;">10</p>
 
@@ -479,18 +480,20 @@
 
 
         <div class="step slide oposit-texyt" data-x="10000" data-y="20000" data-z="5000" data-rotate-x="130" data-rotate-y="80" data-rotate="360" data-scale="5">
-            <h1 style="margin:70px 10px 10px 10px; color: #555; font-size: 38px;">سرعت و عملکرد</h1>
-            <img src="css/1*YpbalqSUMYIYjXCduq7dcA.png" width="360px" style="float: left;">
-            <img src="css/1*gpq0Y-rRczJ5C3DI5_EUlw.png" width="360px" style="float: left; margin-left: 50px; margin-top: 250px;">
+            <h1 style="margin:80px 10px 10px 10px; color: #555; font-size: 38px;">سرعت و عملکرد</h1>
+            <img src="css/performance.jpg" width="420px" style="float: left;">
+
+            <img src="css/memory.jpg" width="450px" style="float: left; margin-left: 50px; margin-top: 150px;">
+            <p style="font-size: 18px; text-align: center; margin-left: 440px;">Memory allocation in MBs ± standard deviation</p>
 
             <p class="num" style="margin: 300px 50px 80px 0;">16</p>
 
         </div>
 
-        <div class="step slide oposit" data-x="11000" data-y="-22000" data-scale="4">
+        <!--<div class="step slide oposit" data-x="11000" data-y="-22000" data-scale="4">
             <h1 style="font-size: 110px; text-align: center;">نتیجه‌گیری</h1>
         </div>
-
+-->
 
         <div class="step slide oposit-texta" data-x="10000" data-y="-20000" data-z="-5000" data-rotate-x="130" data-rotate="150" data-scale="7">
             <img src="css/angular-3.svg" width="200px;" style="float: left; margin-left: 50px;">
@@ -505,7 +508,7 @@
             <p class="num" style="margin: 500px 50px 30px 0;">17</p>
         </div>
 
-        <div class="step slide oposit-textc" data-x="10000" data-y="-25000" data-z="-5000" data-rotate-x="90" data-rotate-y="90" data-rotate="150" data-scale="7">
+        <!-- <div class="step slide oposit-textc" data-x="10000" data-y="-25000" data-z="-5000" data-rotate-x="90" data-rotate-y="90" data-rotate="150" data-scale="7">
 
             <img src="css/react.png" width="200px;" style="float: left; margin-top: 18px; margin-left: 30px;">
             <h1 style="margin:50px 50px 10px 10px; color: #555; font-size: 38px;">نتیجه‌گیری</h1>
@@ -533,7 +536,7 @@
             <p class="num" style="margin: 500px 50px 30px 0;">19</p>
 
         </div>
-
+-->
 
         <div class="step slide" data-x="-10000" data-y="-1500">
             <h1 style="margin:35px 50px 10px 10px; color: #555; font-size: 38px;">منابع</h1>
@@ -544,10 +547,11 @@
             <p style="direction: ltr; color: rgb(3, 96, 188); line-height: 1.2; margin-top: 10px; background-color: rgba(131, 245, 219, 0.43);">https://madewithvuejs.com/</p>
             <p style="direction: ltr; color: rgb(3, 96, 188); line-height: 1.2; margin-top: 10px; background-color: rgba(131, 245, 219, 0.43);">https://madewithangular.com/</p>
             <p style="direction: ltr; color: rgb(3, 96, 188); line-height: 1.2; margin-top: 10px; background-color: rgba(131, 245, 219, 0.43);">https://programmingwithmosh.com/angular/angular-4-tutorial/</p>
-            <div style="direction: rtl; font-size: 25px; color: #555; line-height: 1.2; margin-top: 70px; margin-right: 20px;">
+            <p style="direction: ltr; color: rgb(3, 96, 188); line-height: 1.2; margin-top: 10px; background-color: rgba(131, 245, 219, 0.43);">http://www.stefankrause.net/js-frameworks-benchmark6/webdriver-ts-results/table.html</p>
+            <div style="direction: rtl; font-size: 25px; color: #555; line-height: 0.5; margin-top: 30px; margin-right: 20px;">
                 <p><i class="ion-social-github" style="font-size: 33px;"></i> available on Github </p>
-
             </div>
+
 
 
         </div>
